--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.7",
+    "axios": "^1.5.0",
     "jest": "^29.6.4",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
@@ -43,5 +44,8 @@
   },
   "dependencies": {
     "@types/http-server": "^0.12.1"
+  },
+  "jest": {
+    "testTimeout": 5000
   }
 }
