--- a/package.json
+++ b/package.json
@@ -34,16 +34,20 @@
   "devDependencies": {
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.7",
+    "@types/supertest": "^2.0.12",
     "axios": "^1.5.0",
     "jest": "^29.6.4",
     "prettier": "^3.0.3",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@types/http-server": "^0.12.1"
+    "@types/express": "^4.17.17",
+    "@types/http-server": "^0.12.1",
+    "express": "^4.18.2"
   },
   "jest": {
     "testTimeout": 5000
