--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest --config jestconfig.json",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint -p tsconfig.json",
+    "start": "node ./lib/index.js"
   },
   "files": [
     "lib/**/*"
